Working on reimplementing GraphQL

--- a/views/footer.partial.html
+++ b/views/footer.partial.html
@@ -5,7 +5,7 @@
             <a href="#">Back to top</a>
         </p>
         <p class="mb-1">Album example is &copy; Bootstrap 2021, but please download and customize it for yourself!</p>
-        <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our</p>
+        <p class="mb-0">New to 2Bootstrap? <a href="/">Visit the homepage</a> or read our</p>
     </div>
 </footer>
 {{end}}
