--- a/views/character.page.html
+++ b/views/character.page.html
@@ -1,18 +1,18 @@
 {{template "base" .}}
 {{define "content"}}
-{{with $user := .User}}
+
 
 <main>
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1>Viewing Skillboard of {{$user.Character.Name}}</h1>
+                <h1>Viewing Skillboard of {{.Character.Name}}</h1>
                 <hr />
             </div>
         </div>
         <div class="row">
             <div class="col-3">
-                <img src="https://images.evetech.net/characters/{{$user.Character.ID}}/portrait?size=256" class="rounded mx-auto d-block" />
+                <img src="https://images.evetech.net/characters/{{.Character.ID}}/portrait?size=256" class="rounded mx-auto d-block" />
             </div>
             <div class="col-9">
                 <div class="row">
@@ -26,21 +26,21 @@
                             <tbody>
                                 <tr>
                                     <td>Corporation</td>
-                                    <td class="text-end">{{$user.Character.Corporation.Name}}</td>
+                                    <td class="text-end">{{.Character.Corporation.Name}}</td>
                                 </tr>
-                                {{if $user.Character.Corporation.Alliance}}
+                                {{if .Character.Corporation.Alliance}}
                                 <tr>
                                     <td>Alliance</td>
-                                    <td class="text-end">{{$user.Character.Corporation.Alliance.Name}}</td>
+                                    <td class="text-end">{{.Character.Corporation.Alliance.Name}}</td>
                                 </tr>
                                 {{end}}
                                 <tr>
                                     <td>Date Of Birth</td>
-                                    <td class="text-end">{{$user.Character.Birthday | fmtDate}}</td>
+                                    <td class="text-end">{{.Character.Birthday | fmtDate}}</td>
                                 </tr>
                                 <tr>
                                     <td>Security Status</td>
-                                    <td class="text-end">{{nullFloat64 $user.Character.SecurityStatus}}</td>
+                                    <td class="text-end">{{nullFloat64 .Character.SecurityStatus}}</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -55,15 +55,15 @@
                             <tbody>
                                 <tr>
                                     <td>Unallocated Skillpoints</td>
-                                    <td class="text-end">{{$user.Skills.Meta.UnallocatedSP | nullUint|uintToInt64 | comma}}</td>
+                                    <td class="text-end">{{.SkillMeta.UnallocatedSP | nullUint|uintToInt64 | comma}}</td>
                                 </tr>
                                 <tr>
                                     <td>Allocated Skillpoints</td>
-                                    <td class="text-end">{{$user.Skills.Meta.TotalSP|uintToInt64|comma}}</td>
+                                    <td class="text-end">{{.SkillMeta.TotalSP|uintToInt64|comma}}</td>
                                 </tr>
                                 <tr>
                                     <td>Total Skillpoints</td>
-                                    <td class="text-end">{{$user.Skills.Meta.TotalSP|uintToInt64|comma}}</td>
+                                    <td class="text-end">{{.SkillMeta.TotalSP|uintToInt64|comma}}</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -79,31 +79,31 @@
                             </thead>
                             <tbody>
 
-                                {{if $user.Attributes.BonusRemaps.Valid}}
+                                {{if .Attributes.BonusRemaps.Valid}}
                                 <tr>
                                     <td>Available Remaps</td>
-                                    <td class="text-end">{{$user.Attributes.BonusRemaps.Uint}}</td>
+                                    <td class="text-end">{{.Attributes.BonusRemaps.Uint}}</td>
                                 </tr>
                                 {{end}}
                                 <tr>
                                     <td>Charisma</td>
-                                    <td class="text-end">{{$user.Attributes.Charisma}}</td>
+                                    <td class="text-end">{{.Attributes.Charisma}}</td>
                                 </tr>
                                 <tr>
                                     <td>Intelligence</td>
-                                    <td class="text-end">{{$user.Attributes.Intelligence}}</td>
+                                    <td class="text-end">{{.Attributes.Intelligence}}</td>
                                 </tr>
                                 <tr>
                                     <td>Memory</td>
-                                    <td class="text-end">{{$user.Attributes.Memory}}</td>
+                                    <td class="text-end">{{.Attributes.Memory}}</td>
                                 </tr>
                                 <tr>
                                     <td>Perception</td>
-                                    <td class="text-end">{{$user.Attributes.Perception}}</td>
+                                    <td class="text-end">{{.Attributes.Perception}}</td>
                                 </tr>
                                 <tr>
                                     <td>Willpower</td>
-                                    <td class="text-end">{{$user.Attributes.Willpower}}</td>
+                                    <td class="text-end">{{.Attributes.Willpower}}</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -118,7 +118,7 @@
                             <tbody>
                                 <tr>
                                     <td>Number of Skills Queued</td>
-                                    <td class="text-end">{{len $user.Queue}}</td>
+                                    <td class="text-end">{{len .Queue}}</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -126,7 +126,36 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-3">
+                <h3>Filters</h3>
+                <hr />
+            </div>
+            <div class="col-9">
+                <h3>Skills</h3>
+                <hr />
+                {{range .Skills}}
+                <div class="card">
+                    <div class="card-header">
+                        {{.Info.Name}} ({{len .Skills}} Skills Totaling {{.TotalGroupSP}} SkillPoints)
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        {{range .Skills}}
+                        <li class="list-group-item">
+                            <span class="text-start">
+                                {{.Info.Name}} {{.ActiveSkillLevel}}
+                            </span>
+                            <span class="text-end">
+                                {{.SkillpointsInSkill}}
+                            </span>
+                        </li>
+                        {{end}}
+                    </ul>
+                </div>
+                {{end}}
+
+            </div>
+        </div>
     </div>
 </main>
-{{end}}
 {{end}}
