--- a/internal/templates/layout.plush.html
+++ b/internal/templates/layout.plush.html
@@ -9,8 +9,7 @@
             crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/cyborg/bootstrap.min.css" integrity="sha384-nEnU7Ae+3lD52AK+RGNzgieBWMnEfgTbRHIwEvp1XXPdqdO6uLTd/NwXbzboqjc2"
             crossorigin="anonymous">
-        <meta name="csrf-param" content="authenticity_token" />
-        <meta name="csrf-token" content="<%= authenticity_token %>" />
+
     </head>
 
     <body>
@@ -23,6 +22,8 @@
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
             crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <%= javascriptTag("application.js") %>
 
     </body>
 
