Committing what we have at this stage

--- a/internal/templates/_footer.plush.html
+++ b/internal/templates/_footer.plush.html
@@ -15,7 +15,14 @@
             functioning of this website, nor can it be liable for any damage
             arising from the use of this website.</p>
         <p class="text-center">
-            Skillboard.Evie is Powered by <a href="http://gobuffalo.io/">gobuffalo.io</a>
+            Skillboard.Evie is Powered by a modified implementation of <a href="http://gobuffalo.io/">gobuffalo.io</a>
+            and is brought to you by <a href="https://evewho.com/character/95923084" target="_blank">David Davaham</a><br>
+            | <a target="_blank" href="https://github.com/eveisesi/skillboard">Github</a>
+            |
+            <a target="_blank" href="https://github.com/eveisesi/skillboard/blob/main/LICENSE">License</a>
+            |
+            <a target="_blank" href="https://www.fuzzwork.co.uk/tweetfleet-slack-invites/">Tweetfleet</a> |
+
         </p>
     </footer>
 </div>
