--- a/internal/templates/user/welcome.plush.html
+++ b/internal/templates/user/welcome.plush.html
@@ -1,4 +1,4 @@
-<div class="container mt-2">
+<div class="container my-3">
     <div class="row">
         <div class="col-6 offset-3">
             <div class="card">
@@ -6,7 +6,7 @@
                     <h5 class="mb-0 text-center">Welcome to Skillboard.Evie</h5>
                 </div>
                 <div class="card-body">
-                    Thanks for registering. Your profile is in the process of into our system. This typically takes less than 30 seconds. This page will continue to refresh every
+                    Thanks for registering. We are in the process of creating your profile and syncing it with CCP. This typically takes less than 30 seconds. This page will continue to refresh every
                     ten (10) seconds until your profile is ready. If the page continues to refresh for more than 2 minutes, please use the Discord link at the bottom of the page to report issues.
                 </div>
             </div>
