--- a/internal/templates/_flash.plush.html
+++ b/internal/templates/_flash.plush.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-2">
     <div class="row">
         <div class="col-md-12">
             <%= for (k, messages) in flash { %>
