--- a/internal/templates/user/index.plush.html
+++ b/internal/templates/user/index.plush.html
@@ -1,3 +1,4 @@
+<% let settings = user.Settings %>
 <div class="container my-2">
     <div class="row">
         <div class="col">
@@ -96,6 +97,7 @@
                 </div>
             </div>
             <div class="row">
+                <%= if (!settings.HideAttributes) { %>
                 <div class="col-lg-6">
                     <table class="table table-sm">
                         <thead class="table-dark">
@@ -158,6 +160,9 @@
                         </tbody>
                     </table>
                 </div>
+                <% } %>
+                <%= if (!settings.HideQueue) { %>
+
                 <div class="col-lg-6">
                     <table class="table table-sm">
                         <thead class="table-dark">
@@ -209,20 +214,30 @@
                         </tbody>
                     </table>
                 </div>
+                <% } %>
             </div>
         </div>
     </div>
+    <%= if (!settings.HideSkills || !settings.HideQueue) { %>
     <div class="row mt-2">
         <div class="col-lg-12">
             <div class="header">
                 <ul class="nav nav-pills mb-3 justify-content-center" id="nav-tabs" role="tablist">
+                    <%= if (!settings.HideSkills) { %>
                     <li class="nav-item" role="presentation">
-                        <button class="nav-link" id="skillListTab" data-bs-toggle="pill" data-bs-target="#skillListContent" type="button" role="tab" aria-controls="pills-home"
+                        <button class="nav-link active" id="skillListTab" data-bs-toggle="pill" data-bs-target="#skillListContent" type="button" role="tab" aria-controls="pills-home"
                             aria-selected="true">Skillz</button>
                     </li>
+                    <% } %>
+                    <%= if (!settings.HideQueue) { %>
                     <li class="nav-item" role="presentation">
+                        <%= if(settings.HideSkills) {%>
                         <button class="nav-link active" id="skillQueueTab" data-bs-toggle="pill" data-bs-target="#skillQueueContent" type="button" role="tab">Skill Queue</button>
+                        <% } else { %>
+                        <button class="nav-link" id="skillQueueTab" data-bs-toggle="pill" data-bs-target="#skillQueueContent" type="button" role="tab">Skill Queue</button>
+                        <% } %>
                     </li>
+                    <% } %>
                 </ul>
             </div>
         </div>
@@ -230,13 +245,28 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="tab-content" id="pills-tabContent">
-                <div class="tab-pane fade" id="skillListContent" role="tabpanel">
+                <%= if (!settings.HideSkills) { %>
+                <div class="tab-pane fade show active" id="skillListContent" role="tabpanel">
                     <%= partial("user/skills.plush.html") %>
                 </div>
+                <% } %>
+                <%= if (!settings.HideQueue) { %>
+                <div class="tab-pane fade" id="skillQueueContent" role="tabpanel">
+                    <%= partial("user/queue.plush.html") %>
+                </div>
+                <% } %>
+                <%= if(settings.HideSkills) {%>
                 <div class="tab-pane fade show active" id="skillQueueContent" role="tabpanel">
                     <%= partial("user/queue.plush.html") %>
                 </div>
+                <% } else { %>
+                <div class="tab-pane fade" id="skillQueueContent" role="tabpanel">
+                    <%= partial("user/queue.plush.html") %>
+                </div>
+                <% } %>
             </div>
         </div>
     </div>
+    <% } %>
+
 </div>
