--- a/internal/templates/login/index.plush.html
+++ b/internal/templates/login/index.plush.html
@@ -1,4 +1,4 @@
-<div class="container mt-2">
+<div class="container mt-2 mb-4">
     <div class="row">
         <div class="col-6 offset-3">
             <div class="card">
@@ -15,6 +15,22 @@
                         </a>
                     </div>
                 </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item text-white">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">Skills</h5>
+                            <span>esi-skills.read_skills.v1</span>
+                        </div>
+                        <p class="mb-1">Allows us to pull skills and attributes to generate the skillboard and a list of ships you can fly</p>
+                    </li>
+                    <li class="list-group-item text-white">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">Skill Queue</h5>
+                            <span>esi-skills.read_skillqueue.v1</span>
+                        </div>
+                        <p class="mb-1">Allows us to pull your current skill queue so we can list which skills you are currently training</p>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
