Fix formatting issue on homepage

--- a/templates/home/index.plush.html
+++ b/templates/home/index.plush.html
@@ -41,12 +41,11 @@
                             </span>
                         </div>
                         <div class="col-lg-4 d-flex flex-row align-items-center">
-                            <span class="h5"></span>
-                            <span class="text-muted me-3">
-                                # Queued Skills:
-                            </span>
-                            <span class="h5"></span>
-                            <%= len(user.QueueSummary.Queue) %>
+                            <span class="h5">
+                                <span class="text-muted me-3">
+                                    # Queued Skills:
+                                </span>
+                                <%= len(user.QueueSummary.Queue) %>
                             </span>
                         </div>
                     </div>
