Fix text size on homepage

--- a/templates/home/index.plush.html
+++ b/templates/home/index.plush.html
@@ -30,10 +30,10 @@
                     <div class="row">
                         <div class="col-lg-4 d-flex flex-row align-items-center">
                             <img src="https://images.evetech.net/characters/<%= user.CharacterID %>/portrait?size=64" class="rounded img-fluid" />
-                            <h5 class="text-white ms-2"><%= user.Character.Name %></h5>
+                            <span class="text-white ms-2 h145rem"><%= user.Character.Name %></span>
                         </div>
                         <div class="col-lg-4 d-flex flex-row align-items-center">
-                            <span class="h5">
+                            <span class="h145rem text-white">
                                 <span class="text-muted me-3">
                                     Skill Points:
                                 </span>
@@ -41,7 +41,7 @@
                             </span>
                         </div>
                         <div class="col-lg-4 d-flex flex-row align-items-center">
-                            <span class="h5">
+                            <span class="h145rem text-white">
                                 <span class="text-muted me-3">
                                     # Queued Skills:
                                 </span>
@@ -51,7 +51,6 @@
                     </div>
                 </a>
                 <% } %>
-
             </div>
         </div>
     </div>
