--- a/public/assets/application.css
+++ b/public/assets/application.css
@@ -10,13 +10,6 @@
     justify-content: center !important;
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
-.no-scrollbar::-webkit-scrollbar {
-    display: none;
-  }
-  
-  /* Hide scrollbar for IE, Edge and Firefox */
-  .no-scrollbar {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-  }
+.h145rem {
+    font-size: 1.40rem
+}
