Adding flyable ships tab

--- a/templates/user/_skills.plush.html
+++ b/templates/user/_skills.plush.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-4">
-            <h5 class="header mt-2">Skill Filters (Trained / SP)</h5>
+            <h5 class="header mt-2">Skill Groups (Trained / SP)</h5>
             <ul class="list-group">
                 <%= for (group) in user.SkillsGrouped { %>
                 <li class="list-group-item text-white d-flex w-100 justify-content-between">
