--- a/templates/user/layout.plush.html
+++ b/templates/user/layout.plush.html
@@ -2,24 +2,27 @@
 <html>
 
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta charset="utf-8">
-        <title><%= title %></title>
-        <link rel="apple-touch-icon" sizes="180x180" href="<%= assetPath("favicon/apple-touch-icon.png") %>">
-        <link rel="icon" type="image/png" sizes="32x32" href="<%= assetPath("favicon/favicon-32x32.png") %>">
-        <link rel="icon" type="image/png" sizes="16x16" href="<%= assetPath("favicon/favicon-16x16.png") %>">
-        <link rel="manifest" href="<%= assetPath("favicon/site.webmanifest") %>">
+        <%= debug(meta) %>
+        <title><%= meta.Title %></title>
+        <%= partial("header.html") %>
+        <!-- Primary Meta Tags -->
 
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-            crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/cyborg/bootstrap.min.css" integrity="sha384-nEnU7Ae+3lD52AK+RGNzgieBWMnEfgTbRHIwEvp1XXPdqdO6uLTd/NwXbzboqjc2"
-            crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/fontawesome.min.css"
-            integrity="sha512-P9vJUXK+LyvAzj8otTOKzdfF1F3UYVl13+F8Fof8/2QNb8Twd6Vb+VD52I7+87tex9UXxnzPgWA3rH96RExA7A==" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/regular.min.css"
-            integrity="sha512-d2x1oQUT6HACW9UlXxWI6XrIBDrEE5z2tit/+kWEdXdVYuift7sm+Q6ucfGWQr1F0+GD9/6eYoYDegw2nm05Vw==" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/solid.min.css"
-            integrity="sha512-tk4nGrLxft4l30r9ETuejLU0a3d7LwMzj0eXjzc16JQj+5U1IeVoCuGLObRDc3+eQMUcEQY1RIDPGvuA7SNQ2w==" crossorigin="anonymous">
+        <meta name="title" content="title">
+        <meta name="description" content="<%= meta.Description %>">
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="<%= baseDomain %><%= userPath({userID: user.ID }) %>">
+        <meta property="og:title" content="<%= meta.Title %>">
+        <meta property="og:description" content="<%= meta.Description %>">
+        <meta property="og:image" content="https://images.evetech.net/characters/<%= user.CharacterID %>/portrait?size=256">
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image">
+        <meta property="twitter:url" content="<%= baseDomain %><%= userPath({userID: user.ID }) %>">
+        <meta property="twitter:title" content="<%= meta.Title %>">
+        <meta property="twitter:description" content="<%= meta.Description %>">
+        <meta property="twitter:image" content="https://images.evetech.net/characters/<%= user.CharacterID %>/portrait?size=256">
 
         <%= stylesheetTag("application.css") %>
     </head>
